--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <title>vue</title>
-  <link href="/build/style.css?d03f1b6e1d12272e809d" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  </head>
   <body>
-    <div id="app"></div>
-  <script src="/build/vendor.js?49ca922457dbd5b69ad2"></script><script src="/build/0.build.js?d03f1b6e1d12272e809d"></script></body>
+    <app></app>
+  <script src="/build/vendor.js"></script><script src="/build/0.build.js"></script></body>
 </html>
