--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body>
     <app></app>
-  <script src="/build/vendor.js"></script><script src="/build/0.build.js"></script></body>
+  <script src="/build/vendor.js?4217f636a81e3af31f84"></script><script src="/build/0.build.js?ded4780df9d08797f8ea"></script></body>
 </html>
