--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <title>vue</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   </head>
   <body>
     <app></app>
-  <script src="/build/vendor.js?4217f636a81e3af31f84"></script><script src="/build/0.build.js?ded4780df9d08797f8ea"></script></body>
+  <script src="/build/vendor.js"></script><script src="/build/0.build.js"></script></body>
 </html>
