--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>vue</title>
   </head>
   <body>
-    <app></app>
+    <div id="div"></div>
   <script src="/build/vendor.js"></script><script src="/build/0.build.js"></script></body>
 </html>
